The bug with overlapping Role field in creating new user fixed

--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,6 @@
     transform: rotate(360deg);
   }
 }
+.css-kbvnd4-MuiInputBase-root-MuiOutlinedInput-root.Mui-focused{
+  box-shadow: none !important;
+}
